--- a/GalleryApp/View/Storyboards/ImageCell.xib
+++ b/GalleryApp/View/Storyboards/ImageCell.xib
@@ -4,21 +4,74 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ImageCell" customModule="GalleryApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="211" height="192"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageCell" id="gTV-IL-0wX" customClass="ImageCell" customModule="GalleryApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="216" height="305"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="211" height="192"/>
+                <rect key="frame" x="0.0" y="0.0" width="216" height="305"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k1T-xu-mVG">
+                        <rect key="frame" x="5" y="5" width="206" height="295"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="paperplane" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="UF1-mq-WhH">
+                                <rect key="frame" x="15" y="10.5" width="176" height="175.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="UF1-mq-WhH" secondAttribute="height" multiplier="1:1" id="1gi-hY-Pw1"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="culpa odio esse rerum omnis laboriosam voluptate repudiandae" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="IFi-QY-Kfi">
+                                <rect key="frame" x="15" y="194" width="176" height="47"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <nil key="textColor"/>
+                                <color key="highlightedColor" systemColor="systemGrayColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="●" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="cBK-yh-r6r">
+                                <rect key="frame" x="15" y="10" width="24" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" systemColor="systemGrayColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="cBK-yh-r6r" firstAttribute="leading" secondItem="UF1-mq-WhH" secondAttribute="leading" id="4Us-dr-i5b"/>
+                            <constraint firstItem="cBK-yh-r6r" firstAttribute="top" secondItem="UF1-mq-WhH" secondAttribute="top" id="6gY-V5-oKp"/>
+                            <constraint firstItem="UF1-mq-WhH" firstAttribute="top" secondItem="k1T-xu-mVG" secondAttribute="top" constant="10" id="9Gh-0D-L1o"/>
+                            <constraint firstItem="IFi-QY-Kfi" firstAttribute="leading" secondItem="k1T-xu-mVG" secondAttribute="leading" constant="15" id="EhF-vk-bm2"/>
+                            <constraint firstItem="IFi-QY-Kfi" firstAttribute="top" secondItem="UF1-mq-WhH" secondAttribute="bottom" constant="8" symbolic="YES" id="KsA-r0-Y8R"/>
+                            <constraint firstItem="UF1-mq-WhH" firstAttribute="leading" secondItem="k1T-xu-mVG" secondAttribute="leading" constant="15" id="chl-Sw-n8N"/>
+                            <constraint firstAttribute="trailing" secondItem="IFi-QY-Kfi" secondAttribute="trailing" constant="15" id="eDI-zm-mwT"/>
+                            <constraint firstAttribute="trailing" secondItem="UF1-mq-WhH" secondAttribute="trailing" constant="15" id="fbr-cA-9xd"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="211" height="192"/>
-            <point key="canvasLocation" x="216.66666666666669" y="151.33928571428569"/>
+            <constraints>
+                <constraint firstItem="k1T-xu-mVG" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="4Nb-S6-TAy"/>
+                <constraint firstAttribute="bottom" secondItem="k1T-xu-mVG" secondAttribute="bottom" constant="5" id="4bf-Bl-LuZ"/>
+                <constraint firstItem="k1T-xu-mVG" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="I9z-7M-dgr"/>
+                <constraint firstAttribute="trailing" secondItem="k1T-xu-mVG" secondAttribute="trailing" constant="5" id="qt8-GU-kAl"/>
+            </constraints>
+            <size key="customSize" width="216" height="305"/>
+            <point key="canvasLocation" x="302.89855072463769" y="157.70089285714286"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="paperplane" catalog="system" width="128" height="118"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
