--- a/GalleryApp/View/Storyboards/ImageCell.xib
+++ b/GalleryApp/View/Storyboards/ImageCell.xib
@@ -20,36 +20,36 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k1T-xu-mVG">
                         <rect key="frame" x="5" y="5" width="206" height="295"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="paperplane" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="UF1-mq-WhH">
-                                <rect key="frame" x="15" y="10.5" width="176" height="175.5"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="app" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="UF1-mq-WhH">
+                                <rect key="frame" x="5" y="6" width="196" height="193.5"/>
+                                <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="UF1-mq-WhH" secondAttribute="height" multiplier="1:1" id="1gi-hY-Pw1"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="culpa odio esse rerum omnis laboriosam voluptate repudiandae" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="IFi-QY-Kfi">
-                                <rect key="frame" x="15" y="194" width="176" height="47"/>
+                                <rect key="frame" x="5" y="206" width="196" height="31.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <color key="highlightedColor" systemColor="systemGrayColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="●" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="cBK-yh-r6r">
-                                <rect key="frame" x="15" y="10" width="24" height="22"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="◉" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bWk-bA-ZoR">
+                                <rect key="frame" x="5" y="5" width="16" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" systemColor="systemGrayColor"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="cBK-yh-r6r" firstAttribute="leading" secondItem="UF1-mq-WhH" secondAttribute="leading" id="4Us-dr-i5b"/>
-                            <constraint firstItem="cBK-yh-r6r" firstAttribute="top" secondItem="UF1-mq-WhH" secondAttribute="top" id="6gY-V5-oKp"/>
-                            <constraint firstItem="UF1-mq-WhH" firstAttribute="top" secondItem="k1T-xu-mVG" secondAttribute="top" constant="10" id="9Gh-0D-L1o"/>
-                            <constraint firstItem="IFi-QY-Kfi" firstAttribute="leading" secondItem="k1T-xu-mVG" secondAttribute="leading" constant="15" id="EhF-vk-bm2"/>
-                            <constraint firstItem="IFi-QY-Kfi" firstAttribute="top" secondItem="UF1-mq-WhH" secondAttribute="bottom" constant="8" symbolic="YES" id="KsA-r0-Y8R"/>
-                            <constraint firstItem="UF1-mq-WhH" firstAttribute="leading" secondItem="k1T-xu-mVG" secondAttribute="leading" constant="15" id="chl-Sw-n8N"/>
-                            <constraint firstAttribute="trailing" secondItem="IFi-QY-Kfi" secondAttribute="trailing" constant="15" id="eDI-zm-mwT"/>
-                            <constraint firstAttribute="trailing" secondItem="UF1-mq-WhH" secondAttribute="trailing" constant="15" id="fbr-cA-9xd"/>
+                            <constraint firstItem="bWk-bA-ZoR" firstAttribute="leading" secondItem="k1T-xu-mVG" secondAttribute="leading" constant="5" id="Bme-oV-zrH"/>
+                            <constraint firstItem="IFi-QY-Kfi" firstAttribute="leading" secondItem="k1T-xu-mVG" secondAttribute="leading" constant="5" id="EhF-vk-bm2"/>
+                            <constraint firstItem="IFi-QY-Kfi" firstAttribute="top" secondItem="UF1-mq-WhH" secondAttribute="bottom" constant="5" id="Zey-9p-e98"/>
+                            <constraint firstItem="UF1-mq-WhH" firstAttribute="leading" secondItem="k1T-xu-mVG" secondAttribute="leading" constant="5" id="chl-Sw-n8N"/>
+                            <constraint firstAttribute="trailing" secondItem="IFi-QY-Kfi" secondAttribute="trailing" constant="5" id="eDI-zm-mwT"/>
+                            <constraint firstAttribute="trailing" secondItem="UF1-mq-WhH" secondAttribute="trailing" constant="5" id="fbr-cA-9xd"/>
+                            <constraint firstItem="UF1-mq-WhH" firstAttribute="top" secondItem="k1T-xu-mVG" secondAttribute="top" constant="5" id="izm-KI-YDY"/>
+                            <constraint firstItem="bWk-bA-ZoR" firstAttribute="top" secondItem="k1T-xu-mVG" secondAttribute="top" constant="5" id="tYB-0x-d2A"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -65,14 +65,14 @@
             <connections>
                 <outlet property="backView" destination="k1T-xu-mVG" id="y7d-Sq-CG7"/>
                 <outlet property="imageView" destination="UF1-mq-WhH" id="4JU-Gi-0MC"/>
-                <outlet property="isLoadedLabel" destination="cBK-yh-r6r" id="9dc-Su-eYz"/>
+                <outlet property="isLoadedLabel" destination="bWk-bA-ZoR" id="Nco-sD-pp9"/>
                 <outlet property="titleLabel" destination="IFi-QY-Kfi" id="b2n-f2-z3u"/>
             </connections>
-            <point key="canvasLocation" x="491" y="157"/>
+            <point key="canvasLocation" x="489.85507246376818" y="156.36160714285714"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="paperplane" catalog="system" width="128" height="118"/>
+        <image name="app" catalog="system" width="128" height="114"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
